--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -59,3 +59,11 @@ button{
 .font-size-fix-label{
     font-size: 9pt;
 }
+.box-shadown{
+    -moz-box-shadow: inset 0 0 5px #888;
+    -webkit-box-shadow: inset 0 0 5px#888;
+    box-shadow: inner 0 0 5px #888;
+}
+.text-margin-left{
+    margin-left: 20px;
+}
