--- a/views/docente/select.jade
+++ b/views/docente/select.jade
@@ -1,16 +1,56 @@
-//
-   Created by fabiancote on 7/29/14.
-h1 Enlazar docente a asignatura
+extends ../layout
+block content
+    .navbar.navbar-inverse.navbar
+        .container
+            .navbar-header
+                a(class="navbar-brand", href="#") Sistema EspSoft
+                button(class="navbar-toggle", type="button", data-toggle="collapse", data-target="#navbar-main")
+                    span.icon-bar
+                    span.icon-bar
+                    span.icon-bar
+            .navbar-collapse.collapse.navbar-responsive-collapse
+                ul.nav.navbar-nav
+                    li.active
+                        a(href="#") Postgrados
+                    li
+                        a(href="#") UFPS
+                ul.nav.navbar-nav.navbar-right
+                    li
+                        a(href="/logout")
+                            i.fa.fa-power-off
+                            | &nbsp; Cerrar Sesion
+    .container
+        ul.breadcrumb
+            li: a(href="/director/profile") Inicio
+            li: a(href="/asignatura/#{asignatura.id}") Asignatura
+            li.active Registrar docente
+        .row
+            .margin-auto
+                p.lead.text-center
+                    strong Registro de docente
+                    span.text-primary &nbsp; #{asignatura.nombre} -
+                    span.text-primary &nbsp; #{postgrado.nombre}
+                p.lead.text-center
+                    h5.text-center
+                        a(href="/asignatura/#{asignatura.id}").btn.btn-default.btn-xs
+                            i.fa.fa-chevron-circle-left
+                            | &nbsp; Volver a la asignatura
+                .margin-botton
+                .well.bs-component
+                    form(method="POST", action="/docente/select").form-horizontal
+                        input(type="hidden", name="asignatura", value="#{asignatura.id}")
+                        legend Seleccion de docente
+                        p.text-muted Seleccione de la siguente lista el docente que desea registrar en la asignatura
+                        .list-group.scroll-list
+                            each docente in docentes
+                                .list-group-item
+                                    input(type="radio", name="docente", value="#{docente.id}")
+                                    span.text-margin-left #{docente.nombre}
+                        legend
+                        .form-group
+                            h5.text-center
+                                button(type="submit").btn.btn-primary
+                                    i.fa.fa-plus
+                                    | &nbsp; Seleccionar Docente
 
-form(method="POST", action="/docente/select")
-    input(type="hidden", name="asignatura", value="#{asignatura.id}")
-    legend
-        h3 Seleccione el docente que dictara la asignatura
-        each docente in docentes
 
-            input(type="radio", name="docente", value="#{docente.id}")
-            span #{docente.nombre}
-            br
-
-    input(type="submit", value="Seleccionar")
-br
